--- a/esp.html
+++ b/esp.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>@filipefdrs - Inglês</title>
+    <title>@filipefdrs - Espanhol</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	  <link href="css/style.css" rel="stylesheet">
@@ -47,14 +47,14 @@
     </nav>
     <main>
 		<br>
-		<h2 class="text-center">SERVIÇOS - INGLÊS</h2>
+		<h2 class="text-center">SERVIÇOS - ESPANHOL</h2>
 		<hr>
 		<div class="container">
 			<nav aria-label="breadcrumb">
 			  <ol class="breadcrumb">
 			    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
 			    <li class="breadcrumb-item"><a href="#">Cursos</a></li>
-			    <li class="breadcrumb-item active" aria-current="page">Inglês</li>
+			    <li class="breadcrumb-item active" aria-current="page">Espanhol</li>
 		    </ol>
 		  </nav>
 			<div class="row text-center">
@@ -62,8 +62,8 @@
 				<div class="card">
 					<img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
 					<div class="card-body">
-					  <h5 class="card-title">Inglês</h5>
-					  <p class="card-text">Inglês básico.</p>
+					  <h5 class="card-title">Espanhol</h5>
+					  <p class="card-text">Espanhol básico.</p>
 					  <a href="#" class="btn btn-primary">Contate-me</a>
 					</div>
 				</div>
@@ -72,8 +72,8 @@
 				 <div class="card">
 				   <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
 					<div class="card-body">
-					  <h5 class="card-title">Inglês</h5>
-					  <p class="card-text">Inglês intermediário.</p>
+					  <h5 class="card-title">Espanhol</h5>
+					  <p class="card-text">Espanhol intermediário.</p>
 					  <a href="#" class="btn btn-primary">Contate-me</a>
 					</div>
 				  </div>
@@ -82,8 +82,8 @@
 					<div class="card">
 					  <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
 					  <div class="card-body">
-						<h5 class="card-title">Inglês</h5>
-						<p class="card-text">Inglês avançado.</p>
+						<h5 class="card-title">Espanhol</h5>
+						<p class="card-text">Espanhol avançado.</p>
 						<a href="#" class="btn btn-primary">Contate-me</a>
 					  </div>
 					</div>
@@ -95,8 +95,18 @@
 					<div class="card">
 					  <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
 					  <div class="card-body">
-						<h5 class="card-title">Kit Inglês</h5>
-						<p class="card-text">Inglês básico, intermédiário e avançado.</p>
+						<h5 class="card-title">Kit Espanhol</h5>
+						<p class="card-text">Espanhol básico, intermédiário e avançado.</p>
+						<a href="#" class="btn btn-primary">Contate-me</a>
+					  </div>
+					</div>
+				  </div>
+				<div class="col-md-4 pb-1 pb-md-0">
+					<div class="card">
+					  <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
+					  <div class="card-body">
+						<h5 class="card-title">Kit Espanhol + Inglês</h5>
+						<p class="card-text">Espanhol e Inglês do básico ao avançado.</p>
 						<a href="#" class="btn btn-primary">Contate-me</a>
 					  </div>
 					</div>
