--- a/prog-web.html
+++ b/prog-web.html
@@ -28,6 +28,8 @@
               <a class="dropdown-item" href="prog-web.html">Programação Web</a>
 			  <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="ingles.html">Inglês</a>
+			<div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="esp.html">Espanhol</a>
             </div>
           </li>
           <li class="nav-item">
